--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# CDK
+# CDK compiled files
 cdk.out/
-*.d.ts
-*.js
-*.js.map
+cdk/**/*.d.ts
+cdk/**/*.js
+cdk/**/*.js.map
 
 # Frontend build
 frontend/build/
